Fixed some bugs with transitions and scrollbar

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -137,7 +137,7 @@
   }
 
   .tech-stack-heading {
-    background: linear-gradient(to bottom, #333 40%, #555);
+    background: linear-gradient(to bottom, #333, #555);
   }
   
   .tech-stack-heading > h1 {
@@ -150,6 +150,7 @@
     margin-left: -650px;
     padding: 1rem;
     padding-top: 2rem;
+    padding-bottom: 3rem;
     letter-spacing: 2rem;
     word-spacing: 3rem;
     opacity: 0;
